cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 20)
project(roguelike)
add_executable(roguelike main.cpp)
add_library(entities STATIC roguelike/entities.cpp)
add_library(map STATIC roguelike/map.cpp)
add_library(print STATIC roguelike/print.cpp)
add_library(control STATIC roguelike/control.cpp)
target_link_libraries(roguelike map entities print control)